--- a/kimera_semantics_ros/CMakeLists.txt
+++ b/kimera_semantics_ros/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(kimera_semantics_ros)
+add_definitions(-std=c++14)
 
 find_package(catkin_simple REQUIRED)
 
